# jmap-mcp-rs

./: Cargo.toml
src/: jmap.rs  lib.rs  main.rs
src/tools/: email.rs  filters.rs  mod.rs  submission.rs
tests/: email_tests.rs  test_identity.rs  test_raw_identity.rs
