[package]
name = "jmap-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "A JMAP MCP Server in Rust"
repository = "https://github.com/example/jmap-mcp-rs"

[dependencies]
rmcp = { version = "0.11.0", features = ["server", "macros", "transport-io", "schemars"] }
jmap-client = "0.4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
